<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Syncthing-Fork</string>
    <string name="app_description">An open, trustworthy and decentralized file synchronization application.</string>
    <string name="welcome_title">Welcome to Syncthing for Android</string>
    <string name="introduction">Introduction</string>
    <string name="welcome_text">Syncthing is an open-source file synchronization application. To share data with other devices, you need to add their unique device IDs to the device list. Afterwards you can select which folders to share with which devices.
\n
\nPlease report any problems you encounter via GitHub.</string>
    <string name="storage_permission_title">Storage Permission</string>
    <string name="storage_permission_desc">Syncthing needs to access your storage to do file synchronization.</string>
    <string name="dialog_all_files_access_not_supported">Your device does not support all files access</string>
    <string name="ignore_doze_permission_title">Battery Optimization</string>
    <string name="ignore_doze_permission_os_notice">Android TV\'s are known to occasionally end the app when it\'s running in the background. A solution is available on the wiki at \'%1$s/%2$s\'.</string>
    <string name="ignore_doze_permission_desc">Android may stop synchronization after some time. To prevent this, turn off battery optimization. Some devices have additional task-killing apps preinstalled. You should add Syncthing to their whitelist, as well.</string>
    <string name="toast_ignore_doze_permission_required">This app only works reliably if it is exempted from \"doze\" power save mode.</string>
    <string name="dialog_disable_battery_optimizations_not_supported">Your device does not support disabling battery optimizations</string>
    <string name="dialog_confirm_skip_ignore_doze_permission">Careful: If SyncthingNative is interrupted and does something strange, you\'re to blame. Only skip in case your device does not support granting the permission. Really skip?</string>
    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_desc">Syncthing can be configured to work on selected Wi-Fi networks. Android requires the app to have location permission to read the active Wi-Fi network name. If you want to use this feature, press the button above. You may skip this step. See our privacy policy for more details.</string>
    <string name="location_permission_desc_api_29">Tip for Android 10+: \"Allow all the time\"</string>
    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_desc">Required to show notifications regarding new device connections, folder sharing requests and to keep the service alive and connected.</string>
    <string name="toast_notification_permission_required">Syncthing requires the notification permission to keep its service alive and connected.</string>
    <string name="key_generation_title">Key Generation</string>
    <string name="key_generation_success">Secure keys for private data exchange have been successfully generated.</string>
    <string name="back">Back</string>
    <string name="grant_permission">Grant permission</string>
    <string name="keep_versions">Keep Versions</string>
    <string name="category_run_conditions">Run Conditions</string>
    <string name="category_user_interface">User Interface</string>
    <string name="preference_app_theme_title">Theme</string>
    <string name="category_behaviour">Behaviour</string>
    <string name="category_syncthing_options">Syncthing Options</string>
    <string name="category_syncthing_options_summary">This menu is only available if Syncthing is running.</string>
    <string name="category_backup">Import and Export</string>
    <string name="category_debug">Troubleshooting</string>
    <string name="category_experimental">Experimental</string>
    <string name="run_conditions_title">Run Conditions</string>
    <string name="run_conditions_summary">Use the following options to decide when Syncthing will run.</string>
    <string name="run_on_mobile_data_title">Run on mobile data</string>
    <string name="run_on_mobile_data_summary">Run when device is connected via the mobile data network. Warning: This can consume a lot of data from your mobile operator data plan if you sync large amounts of data.</string>
    <string name="run_on_roaming_title">Run while roaming</string>
    <string name="run_on_roaming_summary">Allow Syncthing to use mobile data while roaming.</string>
    <string name="run_on_wifi_title">Run on Wi-Fi</string>
    <string name="run_on_wifi_summary">Run when device is connected to a Wi-Fi or ethernet network.</string>
    <string name="run_on_metered_wifi_title">Run on metered Wi-Fi</string>
    <string name="run_on_metered_wifi_summary">Run when device is connected to a metered Wi-Fi network e.g. a hotspot or tethered network. Attention: This can consume large portion of your data plan if you sync a lot of data.</string>
    <string name="run_on_whitelisted_wifi_title">Run on specified Wi-Fi networks</string>
    <string name="specify_wifi_ssid_whitelist">Select Wi-Fi networks</string>
    <string name="power_source_title">Run when device is powered by</string>
    <string name="respect_battery_saving_title">Respect Android battery saving setting</string>
    <string name="respect_battery_saving_summary">Disable Syncthing if battery saving is active.</string>
    <string name="respect_master_sync_title">Respect Android \'Auto-sync data\' setting</string>
    <string name="respect_master_sync_summary">Disable Syncthing when the quick settings tile \'Auto-sync data\' is toggled off.</string>
    <string name="run_in_flight_mode_title">Run without network connection</string>
    <string name="run_in_flight_mode_summary">Enabling this option will cause Syncthing to run even when you\'re offline. Enable if your device has problems detecting manual Wi-Fi connections during flight mode.</string>
    <string name="run_on_time_schedule_title">Run according to time schedule</string>
    <string name="run_on_time_schedule_summary">Enabling this option will attempt to sync for a configured duration if run conditions are fulfilled and if some specified interval period has elapsed since the last sync. This can save a lot of battery but requires sync partners to be online. Please note: This may leave incomplete temporary files behind until the next scheduled sync takes place.</string>
    <string name="sync_duration_minutes_title">Duration of the sync cycle</string>
    <string name="sync_duration_minutes_summary">%1$s minutes</string>
    <string name="sleep_interval_minutes_title">Duration of the sync pause interval</string>
    <string name="behaviour_autostart_title">Autostart</string>
    <string name="behaviour_autostart_summary">Start app automatically on operating system startup.</string>
    <string name="use_root_title">Run Syncthing as Superuser</string>
    <string name="use_root_summary">Running Syncthing as root allows it to write to folders Android normally restricts to be readonly accessed. Use this feature with caution.</string>
    <string name="expert_mode_title">Expert mode</string>
    <string name="expert_mode_summary">Enabling this option will show advanced configuration options. You should have a look at the Syncthing Docs first to make sure you know how to use them correctly. Incorrect settings may cause battery drain, system resource exhaustion or incomplete synchronization.</string>
    <string name="device_name">Device Name</string>
    <string name="listen_address">Sync Protocol Listen Addresses</string>
    <string name="max_recv_kbps">Incoming Rate Limit (KiB/s)</string>
    <string name="max_send_kbps">Outgoing Rate Limit (KiB/s)</string>
    <string name="global_announce_enabled">Global Discovery</string>
    <string name="local_announce_enabled">Local Discovery</string>
    <string name="enable_nat_traversal">Enable NAT Traversal</string>
    <string name="global_announce_server">Global Discovery Servers</string>
    <string name="enable_relaying">Enable Relaying</string>
    <string name="usage_reporting">Anonymous Usage Reporting</string>
    <string name="crash_reporting">Anonymous Crash Reporting</string>
    <string name="webui_tcp_port_title">Web UI TCP Port</string>
    <string name="webui_remote_access_title">Web UI remote access</string>
    <string name="webui_username_title">Web UI Username</string>
    <string name="webui_password_title">Web UI Password</string>
    <string name="webui_remote_access_summary">Specify to permit accessing the Web UI from another device. If enabled, you are able to logon with user \'syncthing\' and API key as password. Default: disabled (most secure)</string>
    <string name="download_support_bundle_title">Download Support Bundle</string>
    <string name="undo_ignored_devices_folders_title">Undo ignoring devices and folders</string>
    <string name="export_config">Export Configuration</string>
    <string name="keep_wakelock_while_binary_running">Keep the CPU awake while Syncthing is running</string>
    <string name="keep_wakelock_while_binary_running_summary">Only for Android 5 or lower. Use this setting if you experience unexpected disconnects while operating on battery. This will result in increased battery consumption.</string>
    <string name="use_tor_title">Use Tor</string>
    <string name="use_tor_summary">Force all traffic through Tor for increased privacy. Requires Orbot. Disables proxy options.</string>
    <string name="socks_proxy_address_title">SOCKS5 proxy</string>
    <string name="http_proxy_address_title">HTTP(S) proxy</string>
    <string name="broadcast_service_control_title">Service Control by Broadcast</string>
    <string name="broadcast_service_control_summary">Default: Disabled. Enable to let adb or third-party apps, e.g. automation apps instruct Syncthing to follow run conditions, force start or force stop.</string>
    <string name="import_config">Import Configuration</string>
    <string name="sttrace_title">STTRACE Options</string>
    <string name="environment_variables">Environment variables</string>
    <string name="st_reset_database_title">Reset Database</string>
    <string name="st_reset_deltas_title">Reset Delta Indexes</string>
    <string name="category_about">About</string>
    <string name="verbose_log_title">Verbose log</string>
    <string name="verbose_log_summary">Enabling this option will help to generate debug logs at a very detailed level.</string>
    <string name="log_to_file_title">Log to file</string>
    <string name="log_to_file_summary">The output of SyncthingNative will be written to file.</string>
    <string name="open_log">Open Log</string>
    <string name="open_log_summary">Open the Syncthing and Android log window</string>
    <string name="report_issue_title">Report Issue</string>
    <string name="syncthing_version_title">Syncthing Version</string>
    <string name="app_version_title">Syncthing-Fork Wrapper Version</string>
    <string name="syncthing_api_key">Syncthing API Key (click to copy)</string>
    <string name="syncthing_database_size">Syncthing Database Size</string>
    <string name="os_open_file_limit">Android Open File Limit</string>
    <string name="clean_out_after">Clean out after</string>
    <string name="keep_versions_description">The number of old versions to keep, per file.</string>
    <string name="simple_file_versioning_description">Files are moved to date stamped versions in a .stversions directory when replaced or deleted by Syncthing.</string>
    <string name="cleanout_after_description">The number of days to keep files in the trash can. Zero means forever</string>
    <string name="run_on_whitelisted_wifi_summary">Turn the whitelist on to restrict sync happening only on specified WiFi networks.</string>
</resources>